[package]
name = "advent_of_code_23"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "day6"
path = "src/day6.rs"
[[bench]]
name = "day6"
harness = false

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

