[package]
name = "advent_of_code_23"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code_23"
path = "src/lib.rs"

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day15"
harness = false

[dependencies]
anyhow = "1.0.75"
gnuplot = "0.0.39"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

